# rust-xivloader

./: README.md  bun.lockb  codersff.txt  components.json  dalamudcode.txt  dalamudcodetree.txt  dalamudcodetwo.txt  main.rs  network.rs  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
src/: app.html  app.postcss  input.css  output.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ffxiv.rs  lib.rs  main.rs
src/components/: PageTransitions.svelte
src/lib/components/: TitleBar.svelte  app-sidebar.svelte
src/lib/stores/: cloud-backup-store.ts  game-config.ts  log-store.ts  settings-store.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
src/routes/setup/: +page.svelte
