[package]
name = "rust-xivloader"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rust_xivloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.5"
regex = "1.9.1"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4.3"
num_cpus = "1.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
zip = "0.6"
base64 = "0.13"
bytes = { version = "1.0", features = ["std"] }
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "memoryapi",
    "errhandlingapi",
    "synchapi",
    "handleapi",
    "securitybaseapi",
    "winbase",
    "aclapi",
    "winnt",
    "minwindef",
] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Kernel",
    "Win32_System_SystemServices",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory_NonVolatile",
    "Win32_Security_Credentials",
    "Win32_Security_WinTrust",
    "Win32_Security_Authentication_Identity",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_Pipes",
    "Win32_System_JobObjects",
    "Win32_System_Console"
] }
windows-core = "0.58"
windows-sys = "0.59"
walkdir = "2.4"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-shell = "2"

